# Euro_Counter

./: CMakeLists.txt  README.md
coin_counter/test/labels/: IMG_25.txt  IMG_27.txt
coin_counter/test/videos/video1_frame/labels/: frame_250.txt  frame_562.txt
coin_counter/test/videos/video2_frame/labels/: frame_117.txt  frame_185.txt
dataset/labels/10_CENT/: IMG_22.txt  IMG_23.txt
dataset/labels/1_CENT/: IMG_18.txt  IMG_19.txt
dataset/labels/1_EURO/: IMG_20.txt  IMG_21.txt
dataset/labels/20_CENT/: IMG_7.txt  IMG_8.txt  IMG_9.txt
dataset/labels/2_CENT/: IMG_14.txt  IMG_15.txt  IMG_16.txt  IMG_17.txt
dataset/labels/2_EURO/: IMG_10.txt  IMG_11.txt  IMG_12.txt  IMG_13.txt
dataset/labels/50_CENT/: IMG_0.txt  IMG_1.txt  IMG_2.txt  IMG_3.txt  IMG_4.txt  IMG_5.txt  IMG_6.txt
include/: Guidolin.h  Jin.h  Manzini.h
src/: Euro_Counter.cpp  Guidolin.cpp  Jin.cpp  Manzini.cpp
test/labels/: IMG_24.txt  IMG_26.txt
test/videos/video1_frame/labels/: frame_156.txt  frame_377.txt  frame_452.txt
test/videos/video2_frame/labels/: frame_251.txt  frame_332.txt  frame_532.txt
